contabo-eu/apps/cloudretro/stunner-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GatewayClass
metadata:
  name: cloudretro-gatewayclass
spec:
  controllerName: "stunner.l7mp.io/gateway-operator"
  parametersRef:
    group: "stunner.l7mp.io"
    kind: GatewayConfig
    name: cloudretro-gatewayconfig
    namespace: cloudretro
  description: "STUNner is a WebRTC ingress gateway for Kubernetes"
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: udp-gateway
  namespace: cloudretro
spec:
  gatewayClassName: cloudretro-gatewayclass
  listeners:
    - name: default-listener
      port: 3578
      protocol: UDP
